Correção de estrututa de nav e conteúdo
Correção de estrututa de nav e conteúdo da aula de flexbox

--- a/index.html
+++ b/index.html
@@ -8,20 +8,33 @@
 <body>
 	<header class="header">
 		<nav>
-			<div class="logo">LOGO</div>
-			<div class="menu">MENU</div>
+			<div>
+				<h1 class="logo">LOGO</h1>
+			</div>
+			<div>
+				<ul class="menu">
+					<li>MENU</li>
+					<li>MENU</li>
+					<li>MENU</li>
+					<li>MENU</li>
+				</ul>
+			</div>
 		</nav>
 	</header>
 	<section class="container">
-		<div class="div1">
+		<div>
 			<h2>Texto</h2>
 			<p>Exemplo</p>
 		</div>
-		<div class="div2">
+		<div>
 			<h2>Texto</h2>
 			<p>Exemplo</p>
 		</div>
-		<div class="div3">
+		<div>
+			<h2>Texto</h2>
+			<p>Exemplo</p>
+		</div>
+		<div>
 			<h2>Texto</h2>
 			<p>Exemplo</p>
 		</div>
